--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,12 @@ select{
 	background-color: #FFFFFF !important;
 	padding: 20px;
 }
+
+@media screen and (max-width: 767px) {
+	.custom-container{
+		width: 98%;
+	}
+}
 /*buttons starts here*/
 .buttons{
 	display: -webkit-inline-box;
